Fixed forecast display on small resolution

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,3 +2,9 @@
   margin: 80px auto 10px;
   max-width: 600px;
 }
+
+@media (max-width: 576px) {
+  .App {
+    margin: 10px auto;
+  }
+}
